--- a/po/gl.po
+++ b/po/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-02-04 21:56+0100\n"
-"PO-Revision-Date: 2020-02-04 18:15+0100\n"
+"PO-Revision-Date: 2020-02-05 19:35+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: gl_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.0.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: oversteer/application.py:16
@@ -35,37 +35,30 @@ msgid "set the compatibility mode"
 msgstr "configure o modo de compatibilidade"
 
 #: oversteer/application.py:20
-#, fuzzy
 msgid "set the rotation range [40-900]"
 msgstr "configura o rango de xiro [40-900]"
 
 #: oversteer/application.py:21
-#, fuzzy
 msgid "combine pedals [0-2]"
 msgstr "combina pedais [0-2]"
 
 #: oversteer/application.py:22
-#, fuzzy
 msgid "set the autocenter strength [0-100]"
 msgstr "configura a forza de Autocentrado [0-100]"
 
 #: oversteer/application.py:23
-#, fuzzy
 msgid "set the FF gain [0-100]"
 msgstr "configura a ganancia do FF [0-100]"
 
 #: oversteer/application.py:24
-#, fuzzy
 msgid "set the spring level [0-100]"
 msgstr "configura o nivel de resorte (spring) [0-100]"
 
 #: oversteer/application.py:25
-#, fuzzy
 msgid "set the damper level [0-100]"
 msgstr "configura o nivel de amortiguador (damper) [0-100]"
 
 #: oversteer/application.py:26
-#, fuzzy
 msgid "set the friction level [0-100]"
 msgstr "configura o nivel de fricción [0-100]"
 
@@ -158,9 +151,8 @@ msgid "Galician"
 msgstr "Galego"
 
 #: oversteer/gui.py:56
-#, fuzzy
 msgid "Valencian"
-msgstr "Galego"
+msgstr "Valenciano"
 
 #: oversteer/gui.py:110
 msgid "Do you want us to make this change for you?"
@@ -172,7 +164,7 @@ msgstr "Regras de permisos instalados."
 
 #: oversteer/gui.py:121
 msgid "In some cases, a system restart might be needed."
-msgstr "Nalgúns casos é preciso reiniciar o sistema "
+msgstr "Nalgúns casos é preciso reiniciar o sistema."
 
 #: oversteer/gui.py:124
 msgid ""
@@ -349,11 +341,11 @@ msgstr "Freos"
 
 #: oversteer/main.ui:1112
 msgid "Accel."
-msgstr ""
+msgstr "Acel."
 
 #: oversteer/main.ui:1136
 msgid "Hat"
-msgstr ""
+msgstr "Cruceta"
 
 #: oversteer/main.ui:1275
 msgid "Buttons"
@@ -361,7 +353,7 @@ msgstr "Botóns"
 
 #: oversteer/main.ui:2015
 msgid "Controls"
-msgstr "Controls"
+msgstr "Controis"
 
 #: oversteer/main.ui:2042
 msgid "Global strength of force feedback effects."
